📈PERF : pipline virtualThread -> fixedThread